--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_NAME="Ministerio De Adoración"
+APP_DESCRIPTION="Aplicación para el Ministerio De Adoración"
+APP_VERSION=1.0.0
+APP_ENV=production
+APP_KEY=base64:jsr9gzjli18IItQBV0oYggVn50qqlzyBpGqVHLUt4qs=
+APP_DEBUG=false
+APP_URL=https://ministerio-adoracion.onrender.com
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -20,12 +22,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=dpg-d1k89h15pdvs73agg120-a.oregon-postgres.render.com
+DB_PORT=5432
+DB_DATABASE=database_j2qb
+DB_USERNAME=database_j2qb_user
+DB_PASSWORD=QgaRCtmWCSR4Cwyn1C2BTexYS7C1nKp7
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
