fix: enable debug mode in .env.example for development

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_DESCRIPTION="Aplicación para el Ministerio De Adoración"
 APP_VERSION=1.0.0
 APP_ENV=production
 APP_KEY=base64:jsr9gzjli18IItQBV0oYggVn50qqlzyBpGqVHLUt4qs=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=https://ministerio-adoracion.onrender.com
 
 APP_LOCALE=en
